added setuprc file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Nuxt-SSR-Firebase",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Host Nuxt.js SSR app on Firebase Cloud Functions with Firebase Dynamic Hosting.",
   "license": "MIT",
   "author": "David Royer",
@@ -10,6 +10,7 @@
     "build": "yarn build:nuxt && yarn clean && yarn copyassets",
     "serve": "NODE_ENV=development firebase serve",
     "deploy": "firebase deploy",
+    "predeploy": "yarn build",
     "setup": "yarn install && yarn setup:client && yarn setup:firebase && yarn setup:server",
     "setup:client": "cd \"src\" && yarn install",
     "setup:server": "cd \"prod/server\" && yarn install",
