update readme and added firebaserc.sample

--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "serve": "NODE_ENV=development firebase serve",
     "deploy": "firebase deploy",
     "predeploy": "yarn build",
-    "setup": "yarn install && yarn setup:client && yarn setup:firebase && yarn setup:server",
+    "setup": "yarn install && yarn setup:client && yarn setup:server",
     "setup:client": "cd \"src\" && yarn install",
     "setup:server": "cd \"prod/server\" && yarn install",
-    "setup:firebase": "mv .setup-firebaserc .firebaserc",
     "copyassets": "yarn copydist && yarn copystatic",
     "copydist": "cp -R prod/server/nuxt/dist/ prod/client/assets",
     "copystatic": "cp -R src/static/ prod/client",
